# click-loguru

./: .gitignore  example.py  pyproject.toml  setup.cfg  setup.py
click_loguru/: decorators.py  intercept.py
