[tool.poetry]
name = "click-loguru-decorators"
version = "0.1.0"
description = ""
authors = ["Vašek Dohnal <vaclav.dohnal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.5.3"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
